<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"  >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtTitle"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textStyle="bold"
                android:textSize="40sp"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/txtPrincipal"
                android:hint="@string/hint1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:layout_marginTop="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTitle"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:gravity="start" />

            <EditText
                android:id="@+id/txtRate"
                android:hint="@string/hint2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:layout_marginTop="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPrincipal"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:gravity="start" />

            <EditText
                android:id="@+id/txtYears"
                android:hint="@string/hint3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:layout_marginTop="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtRate"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:gravity="start" />

            <Button
                android:id="@+id/btnConvert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnCompute"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtYears"
                android:textSize="20sp"
                android:padding="10dp"
                android:background="@color/darkTeal"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txtResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnConvert"
                android:textSize="25sp"
                android:textColor="@color/white" />

            <!-- output -->
            <TextView
                android:id="@+id/txtOutputPrincipal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="20dp"
                android:text="@string/principalOutput"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTitle"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txtOutputRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="20dp"
                android:text="@string/interestOutput"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtOutputPrincipal"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txtOutputYears"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="20dp"
                android:text="@string/yearsOutput"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtOutputRate"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txtOutputTotalPaid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="20dp"
                android:text="@string/totalPaidOutput"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtOutputYears"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txtOutputTotalInterest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="20dp"
                android:text="@string/totalInterestOutput"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtOutputTotalPaid"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txtInvalidYears"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="20dp"
                android:text="@string/invalidYearsOutput"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtOutputYears"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:visibility="gone" />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/imgHouse"
                android:src="@drawable/image_border"
                android:contentDescription="@string/description"
                android:layout_marginBottom="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:adjustViewBounds="true"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>